--- a/Software/frontend/src/Components/pets/pet/Pet.css
+++ b/Software/frontend/src/Components/pets/pet/Pet.css
@@ -1,22 +1,30 @@
 .pet {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin: 15px 4.5%;
     box-shadow: 2px 2px 10px lightgray;
     border: 1px black;
     border-radius: 1em;
     background-color: white;
+    width: 90vw;
+}
+
+.pet .focusLevel {
+    display: flex;  
+    align-items: center;
+    margin-right: 1.5em;
 }
 
 .pet h5 {
-    position: fixed;
-    right: calc(7% + 180px);
+    margin-right: 1em;
 }
 
 .pet h2 {
     color: black;
     text-decoration: none;
     margin-left: 1em;
+    text-align: left;
 }
 
 .pet h2:hover {
@@ -29,7 +37,6 @@ progress {
     margin-top: 1px;
     height: 10px;
     -webkit-appearance: none;
-    position: fixed;
     right: 7%;
 }
 
